Generate models from swagger
